--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Devcamper backend API",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=producction node index",
+    "start": "NODE_ENV=production node index",
     "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   }
 }
