--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "keywords": [],
   "author": "Winn",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
-  }
+  "bugs": {
+    "url": "https://github.com/winnphan/hoavien/issues"
+  },
+  "homepage": "https://github.com/winnphan/hoavien#readme"
 }
