--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+
+#MONGO_URI=mongodb+srv://admin-win:Win260595@cluster0-qo6hh.mongodb.net/test?retryWrites=true&w=majority
