--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
   "bugs": {
     "url": "https://github.com/winnphan/hoavien/issues"
   },
-  "homepage": "https://github.com/winnphan/hoavien#readme"
+  "homepage": "https://github.com/winnphan/hoavien#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.7",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {}
 }
