--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 
 MONGO_URI=mongodb+srv://admin-win:Win260595@cluster0-qo6hh.mongodb.net/test?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=AYVGTsu2ARo3rsoeQE8ObVGaWYhTj57s
