Fileupload to bootcamp

--- a/config/config.env
+++ b/config/config.env
@@ -5,3 +5,6 @@ MONGO_URI=mongodb+srv://admin-win:Win260595@cluster0-qo6hh.mongodb.net/test?retr
 
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=AYVGTsu2ARo3rsoeQE8ObVGaWYhTj57s
+
+FILE_UPLOAD_PATH=./public/uploads
+MAX_FILE_UPLOAD=1000000
