--- a/config/config.env
+++ b/config/config.env
@@ -8,3 +8,6 @@ GEOCODER_API_KEY=AYVGTsu2ARo3rsoeQE8ObVGaWYhTj57s
 
 FILE_UPLOAD_PATH=./public/uploads
 MAX_FILE_UPLOAD=1000000
+
+JWT_SECRET=SSDKLSDFJSVCXUVCIOIOFUSKDFHJKSDFH
+JWT_EXPIRE=30d
