Sending JWT in a Cookie Auth Protect Middleware

--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=3000
 
-MONGO_URI=mongodb+srv://admin-win:Win260595@cluster0-qo6hh.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin-win:5hadjxM6B5P1CxZq@cluster0-qo6hh.mongodb.net/test?retryWrites=true&w=majority
 
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=AYVGTsu2ARo3rsoeQE8ObVGaWYhTj57s
@@ -11,3 +11,4 @@ MAX_FILE_UPLOAD=1000000
 
 JWT_SECRET=SSDKLSDFJSVCXUVCIOIOFUSKDFHJKSDFH
 JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
