Reset token and update Send email

--- a/config/config.env
+++ b/config/config.env
@@ -12,3 +12,10 @@ MAX_FILE_UPLOAD=1000000
 JWT_SECRET=SSDKLSDFJSVCXUVCIOIOFUSKDFHJKSDFH
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=2dcc341eb324c5
+SMTP_PASSWORD=7e90edeecc058c
+FROM_EMAIL=noreply@hoavien.com
+FROM_NAME=HoaVien
