--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.4.10",
     "slugify": "^1.4.4"
   },
   "devDependencies": {}
